--- a/modules/core/locales/xh/LC_MESSAGES/core.po
+++ b/modules/core/locales/xh/LC_MESSAGES/core.po
@@ -26,7 +26,7 @@ msgstr ""
 "ilungiselelwe ngokuchanekileyo kuzo zombini umbonelei wesazisi "
 "nomboneleli wenkonzo."
 
-msgid "{core:no_cookie:retry}"
+msgid "Retry"
 msgstr "Zama kwakhona"
 
 msgid "{core:no_cookie:description}"
