--- a/modules/core/locales/xh/LC_MESSAGES/core.po
+++ b/modules/core/locales/xh/LC_MESSAGES/core.po
@@ -25,33 +25,20 @@ msgstr "Zama kwakhona"
 msgid "{core:cardinality:problematic_attributes}"
 msgstr "Iimpawu eziyingxaki zezi:"
 
-msgid "{core:no_state:cause_nocookie}"
-msgstr "Iikhuki zisenokwenziwa zingasebenzi kwibhrawuza yewebhu."
-
-msgid "{core:no_state:report_header}"
-msgstr "Chaza le mpazamo"
-
-msgid "{core:no_state:causes}"
-msgstr "Le mpazamo isenokuba ibangelwe:"
-
-msgid "{core:no_state:description}"
-msgstr "Asikwazanga ukufumana inkcazelo yobume yesicelo sangoku."
-
-msgid "{core:no_state:report_text}"
-msgstr "Ukuba le ngxaki iyaqhubeka, ungayichaza kubalawuli besistim."
-
-msgid "{core:no_state:header}"
-msgstr "Inkcazelo yobume ilahlekile"
-
 msgid "{core:cardinality:cardinality_header}"
 msgstr "Iimpawu Ezingachanekanga"
-
-msgid "{core:no_state:cause_openbrowser}"
-msgstr "Kuvulwe ibhrawuza yewebhu ngeethebhu eziseyivwe kwiseshoni edlulileyo."
 
 msgid "{core:cardinality:got_want}"
 msgstr "kukho amaxabiso e-%GOT%, sifuna %WANT%"
 
-msgid "{core:no_state:cause_backforward}"
+msgid "This error may be caused by:"
+msgstr "Le mpazamo isenokuba ibangelwe:"
+
+msgid "Opened the web browser with tabs saved from the previous session."
+msgstr "Kuvulwe ibhrawuza yewebhu ngeethebhu eziseyivwe kwiseshoni edlulileyo."
+
+msgid "Using the back and forward buttons in the web browser."
 msgstr "Ukusebenzisa amaqhosha okuya emva naphambili kwibhrawuza yewebhu."
 
+msgid "Cookies may be disabled in the web browser."
+msgstr "Iikhuki zisenokwenziwa zingasebenzi kwibhrawuza yewebhu."
