--- a/modules/core/locales/zu/LC_MESSAGES/core.po
+++ b/modules/core/locales/zu/LC_MESSAGES/core.po
@@ -25,28 +25,16 @@ msgstr "Zama futhi"
 msgid "{core:cardinality:problematic_attributes}"
 msgstr "Isici(izici) esiyinkinga sithi:"
 
-msgid "{core:no_state:cause_nocookie}"
+msgid "Cookies may be disabled in the web browser."
 msgstr "Amakhukhi kungenzeka ukuthi ayekisiwe kusiphequluli sewebhu."
 
-msgid "{core:no_state:report_header}"
-msgstr "Bika leli phutha"
-
-msgid "{core:no_state:causes}"
+msgid "This error may be caused by:"
 msgstr "Leli phutha kungenzeka libangelwa ukuthi:"
-
-msgid "{core:no_state:description}"
-msgstr "Asikwazanga ukuthola ulwazi lwesifunda lwesicelo samanje."
-
-msgid "{core:no_state:report_text}"
-msgstr "Uma le nkinga iphikelela, ungayibika kubalawuli besistimu."
-
-msgid "{core:no_state:header}"
-msgstr "Ulwazi lwesifunda lulahlekile"
 
 msgid "{core:cardinality:cardinality_header}"
 msgstr "Izici Ezingalungile"
 
-msgid "{core:no_state:cause_openbrowser}"
+msgid "Opened the web browser with tabs saved from the previous session."
 msgstr ""
 "Kuvulwe isiphequluli sewebhu ngamathebhu alondolozwe kuseshini "
 "yangaphambilini."
@@ -54,6 +42,6 @@ msgstr ""
 msgid "{core:cardinality:got_want}"
 msgstr "uthole amanani angu-%GOT%, ufuna %WANT%"
 
-msgid "{core:no_state:cause_backforward}"
+msgid "Using the back and forward buttons in the web browser."
 msgstr "Ukusebenzisa izinkinobho ezithi emuva naphambili kusiphequluli sewebhu."
 
