Move 'Deprecated' translation to admin-module

--- a/modules/admin/locales/ru/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ru/LC_MESSAGES/admin.po
@@ -16,3 +16,6 @@ msgstr ""
 
 msgid "Metadata parser"
 msgstr "Средство синтаксического анализа метаданных"
+
+msgid "Deprecated"
+msgstr "Устаревшие"
