--- a/modules/admin/locales/zu/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/zu/LC_MESSAGES/admin.po
@@ -13,3 +13,6 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.3.4\n"
+
+msgid "Deprecated"
+msgstr "已经超时"
