--- a/modules/admin/locales/hu/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/hu/LC_MESSAGES/admin.po
@@ -16,3 +16,6 @@ msgstr ""
 
 msgid "Metadata parser"
 msgstr "Metaadat értelmező"
+
+msgid "Deprecated"
+msgstr "Kivezetés alatt álló opció - használata ellenjavallt"
