--- a/modules/admin/locales/sl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/sl/LC_MESSAGES/admin.po
@@ -16,3 +16,6 @@ msgstr ""
 
 msgid "Metadata parser"
 msgstr "Metapodatkovna sintaktična analiza (parser)"
+
+msgid "Deprecated"
+msgstr "Neustrezen"
