--- a/modules/admin/locales/nl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/nl/LC_MESSAGES/admin.po
@@ -1,4 +1,3 @@
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: SimpleSAMLphp 2.0.0\n"
@@ -24,103 +23,103 @@ msgid "SimpleSAMLphp installation page"
 msgstr "SimpleSAMLphp installatiepagina"
 
 msgid "SimpleSAMLphp is installed in:"
-msgstr ""
+msgstr "SimpleSAMLphp is geïnstalleerd in:"
 
 msgid "You are running version <kbd>%version%</kbd>."
-msgstr ""
+msgstr "U draait versie <kbd>%version%</kbd>."
 
 msgid "Configuration"
 msgstr "Configuratie"
 
 msgid "Checking your PHP installation"
-msgstr "Test de PHP-installatie"
+msgstr "Controle van de PHP-installatie"
 
 msgid "required"
-msgstr ""
+msgstr "vereist"
 
 msgid "optional"
-msgstr ""
+msgstr "optioneel"
 
 msgid "SimpleSAMLphp Show Metadata"
-msgstr ""
+msgstr "SimpleSAMLphp Toon Metadata"
 
 msgid "Metadata"
 msgstr "Metadata"
 
 msgid "Copy to clipboard"
-msgstr ""
+msgstr "Kopieer naar klembord"
 
 msgid "Back"
 msgstr "Terug"
 
 msgid "XML metadata"
-msgstr "XML metadata"
+msgstr "XML-metadata"
 
 msgid "or select a file:"
-msgstr "of kies een file:"
+msgstr "of kies een bestand:"
 
 msgid "No file selected."
-msgstr ""
+msgstr "Geen bestand geselecteerd."
 
 msgid "Parse"
-msgstr "Parse"
+msgstr "Converteer"
 
 msgid "Converted metadata"
 msgstr "Geconverteerde metadata"
 
 msgid "An error occured"
-msgstr ""
+msgstr "Er trad een fout op"
 
 msgid "Test Authentication Sources"
-msgstr ""
+msgstr "Test Authentication Sources"
 
 msgid "Hosted entities"
-msgstr ""
+msgstr "Hosted entity's"
 
 msgid "Trusted entities"
-msgstr ""
+msgstr "Vertrouwde entity's"
 
 msgid "expired"
-msgstr ""
+msgstr "verlopen"
 
 msgid "expires"
-msgstr ""
+msgstr "verloopt"
 
 msgid "Tools"
 msgstr "Gereedschap"
 
 msgid "Look up metadata for entity:"
-msgstr ""
+msgstr "Zoek metadata op voor entity:"
 
 msgid "EntityID"
-msgstr ""
+msgstr "EntityID"
 
 msgid "Search"
-msgstr ""
+msgstr "Zoek"
 
 msgid "Type:"
-msgstr ""
+msgstr "Type:"
 
 msgid "SAML Metadata"
-msgstr ""
+msgstr "SAML Metadata"
 
 msgid "You can get the metadata XML on a dedicated URL:"
-msgstr ""
+msgstr "U kunt de metadata-XML opvragen via deze URL:"
 
 msgid "In SAML 2.0 Metadata XML format:"
-msgstr "In SAML 2.0 Metadata XML formaat:"
+msgstr "In SAML 2.0 Metadata XML-formaat:"
 
 msgid "SimpleSAMLphp Metadata"
-msgstr ""
+msgstr "SimpleSAMLphp Metadata"
 
 msgid "Use this if you are using a SimpleSAMLphp entity on the other side:"
-msgstr ""
+msgstr "Gebruik dit als de andere zijde ook SimpleSAMLphp gebruikt:"
 
 msgid "Certificates"
 msgstr "Certificaten"
 
 msgid "new"
-msgstr ""
+msgstr "nieuw"
 
 msgid "Diagnostics on hostname, port and protocol"
 msgstr "Inspectie op hostnaam, poort en protocol"
@@ -131,6 +130,9 @@ msgid ""
 "     it lasts until it times out and all the attributes that are attached to "
 "your session."
 msgstr ""
+"Hallo, dit is de statuspagina van SimpleSAMLphp. Hier kunt u zien "
+"of uw sessie verlopen is, hoe lang het nog duurt totdat die verloopt "
+"en alle attributen die met uw sessie verbonden zijn."
 
 msgid "Your session is valid for %remaining% seconds from now."
 msgstr "Uw sessie is nog %remaining% seconden geldig vanaf dit moment."
@@ -139,7 +141,7 @@ msgid "Your attributes"
 msgstr "Uw attributen"
 
 msgid "Technical information"
-msgstr ""
+msgstr "Technische informatie"
 
 msgid "SAML Subject"
 msgstr "SAML Subject"
@@ -151,10 +153,10 @@ msgid "Format"
 msgstr "Formaat"
 
 msgid "Authentication data"
-msgstr ""
+msgstr "Authenticatiegegevens"
 
 msgid "Logout"
 msgstr "Afmelden"
 
 msgid "Content of jpegPhoto attribute"
-msgstr ""
+msgstr "Inhoud van het jpegPhoto-attribuut""
