--- a/modules/admin/locales/sl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/sl/LC_MESSAGES/admin.po
@@ -158,3 +158,154 @@ msgstr "Odjava"
 
 msgid "Content of jpegPhoto attribute"
 msgstr ""
+
+msgid "Log out"
+msgstr ""
+
+msgid "Test"
+msgstr ""
+
+msgid "Federation"
+msgstr "Federacija"
+
+msgid "Information on your PHP installation"
+msgstr ""
+
+msgid "PHP %minimum% or newer is needed. You are running: %current%"
+msgstr ""
+
+msgid "Date/Time Extension"
+msgstr ""
+
+msgid "Hashing function"
+msgstr ""
+
+msgid "ZLib"
+msgstr ""
+
+msgid "OpenSSL"
+msgstr ""
+
+msgid "XML DOM"
+msgstr ""
+
+msgid "Regular expression support"
+msgstr ""
+
+msgid "JSON support"
+msgstr ""
+
+msgid "Standard PHP library (SPL)"
+msgstr ""
+
+msgid "Multibyte String extension"
+msgstr ""
+
+msgid "cURL (might be required by some modules)"
+msgstr ""
+
+msgid ""
+"cURL (required if automatic version checks are used, also by some modules)"
+msgstr ""
+
+msgid "Session extension (required if PHP sessions are used)"
+msgstr ""
+
+msgid "Session extension"
+msgstr ""
+
+msgid "PDO Extension (required if a database backend is used)"
+msgstr ""
+
+msgid "PDO extension"
+msgstr ""
+
+msgid "LDAP extension (required if an LDAP backend is used)"
+msgstr ""
+
+msgid "LDAP extension"
+msgstr ""
+
+msgid "Radius extension (required if a radius backend is used)"
+msgstr ""
+
+msgid "Radius extension"
+msgstr ""
+
+msgid "predis/predis (required if the redis data store is used)"
+msgstr ""
+
+msgid "predis/predis library"
+msgstr ""
+
+msgid ""
+"Memcache or Memcached extension (required if the memcache backend is used)"
+msgstr ""
+
+msgid "Memcache or Memcached extension"
+msgstr ""
+
+msgid ""
+"The <code>technicalcontact_email</code> configuration option should be set"
+msgstr ""
+
+msgid "The auth.adminpassword configuration option must be set"
+msgstr ""
+
+msgid "Hosted IdP metadata present"
+msgstr ""
+
+msgid "Matching key-pair for signing assertions"
+msgstr ""
+
+msgid "Matching key-pair for signing assertions (rollover key)"
+msgstr ""
+
+msgid "Matching key-pair for signing metadata"
+msgstr ""
+
+msgid ""
+"<strong>You are not using HTTPS</strong> to protect communications with your "
+"users. HTTP works fine for testing purposes, but in a production environment "
+"you should use HTTPS. <a href=\"https://simplesamlphp.org/docs/stable/"
+"simplesamlphp-maintenance\">Read more about the maintenance of "
+"SimpleSAMLphp</a>."
+msgstr ""
+
+msgid ""
+"<strong>The configuration uses the default secret salt</strong>. Make sure "
+"to modify the <code>secretsalt</code> option in the SimpleSAMLphp "
+"configuration in production environments. <a href=\"https://simplesamlphp."
+"org/docs/stable/simplesamlphp-install\">Read more about the maintenance of "
+"SimpleSAMLphp</a>."
+msgstr ""
+
+msgid ""
+"The length of query parameters is limited by the PHP Suhosin extension. "
+"Please increase the <code>suhosin.get.max_value_length</code> option in your "
+"php.ini to at least 2048 bytes."
+msgstr ""
+
+msgid ""
+"The cURL PHP extension is missing. Cannot check for SimpleSAMLphp updates."
+msgstr ""
+
+msgid ""
+"You are running an outdated version of SimpleSAMLphp. Please update to <a "
+"href=\"%latest%\">the latest version</a> as soon as possible."
+msgstr ""
+
+msgid "XML to SimpleSAMLphp metadata converter"
+msgstr "XML v SimpleSAMLphp pretvornik metapodatkov"
+
+msgid "SAML 2.0 SP metadata"
+msgstr ""
+
+msgid "SAML 2.0 IdP metadata"
+msgstr ""
+
+msgid "ADFS SP metadata"
+msgstr ""
+
+msgid "ADFS IdP metadata"
+msgstr ""
