--- a/modules/admin/locales/nl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/nl/LC_MESSAGES/admin.po
@@ -162,109 +162,113 @@ msgid "Content of jpegPhoto attribute"
 msgstr "Inhoud van het jpegPhoto-attribuut"
 
 msgid "Log out"
-msgstr ""
+msgstr "Log uit"
 
 msgid "Test"
-msgstr ""
+msgstr "Test"
 
 msgid "Federation"
 msgstr "Federatie"
 
 msgid "Information on your PHP installation"
-msgstr ""
+msgstr "Informatie over uw PHP-installatie"
 
 msgid "PHP %minimum% or newer is needed. You are running: %current%"
-msgstr ""
+msgstr "PHP %minimum% of hoger is benodigd. U heeft: %current%"
 
 msgid "Date/Time Extension"
-msgstr ""
+msgstr "Date/Time-extensie"
 
 msgid "Hashing function"
-msgstr ""
+msgstr "Hashfunctie"
 
 msgid "ZLib"
-msgstr ""
+msgstr "ZLib"
 
 msgid "OpenSSL"
-msgstr ""
+msgstr "OpenSSL"
 
 msgid "XML DOM"
-msgstr ""
+msgstr "XML DOM"
 
 msgid "Regular expression support"
-msgstr ""
+msgstr "Reguliere expressie-ondersteuning"
 
 msgid "JSON support"
-msgstr ""
+msgstr "JSON-ondersteuning"
 
 msgid "Standard PHP library (SPL)"
-msgstr ""
+msgstr "Standard PHP library (SPL)"
 
 msgid "Multibyte String extension"
-msgstr ""
+msgstr "Multibye String-extensie"
 
 msgid "cURL (might be required by some modules)"
-msgstr ""
+msgstr "cURL (kan nodig zijn voor bepaalde modules)"
 
 msgid ""
 "cURL (required if automatic version checks are used, also by some modules)"
 msgstr ""
+"cURL (vereist als automatische versiechecks ingeschakeld zijn, eveneens "
+"voor bepaalde modules)"
 
 msgid "Session extension (required if PHP sessions are used)"
-msgstr ""
+msgstr "Sessie-extensie (vereist als PHP-sessies worden gebruikt)"
 
 msgid "Session extension"
-msgstr ""
+msgstr "Sessie-extensie"
 
 msgid "PDO Extension (required if a database backend is used)"
-msgstr ""
+msgstr "PDO-extensie (vereist als een database-backend wordt gebruikt)"
 
 msgid "PDO extension"
-msgstr ""
+msgstr "PDO-extensie"
 
 msgid "LDAP extension (required if an LDAP backend is used)"
-msgstr ""
+msgstr "LDAP-extensie (vereist als een LDAP-backend wordt gebruikt)"
 
 msgid "LDAP extension"
-msgstr ""
+msgstr "LDAP-extensie"
 
 msgid "Radius extension (required if a radius backend is used)"
-msgstr ""
+msgstr "Radius-extensie (vereist als een radius-backend wordt gebruikt)"
 
 msgid "Radius extension"
-msgstr ""
+msgstr "Radius-extensie"
 
 msgid "predis/predis (required if the redis data store is used)"
-msgstr ""
+msgstr "predis/predis (vereist als de redis-dataopslag wordt gebruikt)"
 
 msgid "predis/predis library"
-msgstr ""
+msgstr "predis/predis-bibliotheek"
 
 msgid ""
 "Memcache or Memcached extension (required if the memcache backend is used)"
 msgstr ""
+"Memache- of Memcached-extensie (vereist als de memcache-backend wordt gebruikt)"
 
 msgid "Memcache or Memcached extension"
-msgstr ""
+msgstr "Memcache- of Memcached-extensie"
 
 msgid ""
 "The <code>technicalcontact_email</code> configuration option should be set"
 msgstr ""
+"Het instellen van de optie <code>technicalcontact_email</code> wordt aangeraden"
 
 msgid "The auth.adminpassword configuration option must be set"
-msgstr ""
+msgstr "Er moet een auth.adminpassword ingesteld zijn"
 
 msgid "Hosted IdP metadata present"
-msgstr ""
+msgstr "Hosted IdP metadata aanwezig"
 
 msgid "Matching key-pair for signing assertions"
-msgstr ""
+msgstr "Overeenkomend sleutelpaar voor het ondertekenen van assertions"
 
 msgid "Matching key-pair for signing assertions (rollover key)"
-msgstr ""
+msgstr "Overeenkomend sleutelpaar voor het ondertekenen van assertions (rollover)"
 
 msgid "Matching key-pair for signing metadata"
-msgstr ""
+msgstr "Overeenkomend sleutelpaar voor het ondertekenen van metadata"
 
 msgid ""
 "<strong>You are not using HTTPS</strong> to protect communications with your "
@@ -273,6 +277,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>U gebruikt geen HTTPS</strong> om de verbinding met uw gebruikers "
+"te beveiligen. HTTP werkt prima voor testdoeleinden, maar in een "
+"productieomgeving zou HTTPS gebruikt moeten worden."
+"<a href=\"https://simplesamlphp.org/docs/stable/"
+"simplesamlphp-maintenance\">Lees meer over het onderhoud van "
+"SimpleSAMLphp</a>."
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
@@ -281,6 +291,12 @@ msgid ""
 "org/docs/stable/simplesamlphp-install\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>In de configuratie staat het meegeleverde secret salt</strong>. "
+"Verzeker u ervan de waarde van de <code>secretsalt</code> parameter aan "
+"te passen voor productieomgevingen. "
+"<a href=\"https://simplesamlphp.org/docs/stable/"
+"simplesamlphp-maintenance\">Lees meer over het onderhoud van "
+"SimpleSAMLphp</a>."
 
 msgid ""
 "The length of query parameters is limited by the PHP Suhosin extension. "
@@ -291,23 +307,26 @@ msgstr ""
 msgid ""
 "The cURL PHP extension is missing. Cannot check for SimpleSAMLphp updates."
 msgstr ""
+"De cURL-extensie mist in PHP. Kan niet controleren op updates."
 
 msgid ""
 "You are running an outdated version of SimpleSAMLphp. Please update to <a "
 "href=\"%latest%\">the latest version</a> as soon as possible."
 msgstr ""
+"U heeft een verouderde versie van SimpleSAMLphp. Het is aan te raden "
+"zo snel mogelijk te upgraden naar <a href=\"%latest%\">de laatste versie</a>."
 
 msgid "XML to SimpleSAMLphp metadata converter"
 msgstr "XML naar SimpleSAMLphp metadata vertaling"
 
 msgid "SAML 2.0 SP metadata"
-msgstr ""
+msgstr "SAML 2.0 SP metadata"
 
 msgid "SAML 2.0 IdP metadata"
-msgstr ""
+msgstr "SAML 2.0 IdP metadata"
 
 msgid "ADFS SP metadata"
-msgstr ""
+msgstr "ADFS SP metadata"
 
 msgid "ADFS IdP metadata"
-msgstr ""
+msgstr "ADFS IdP metadata"
