Remove unused frontpage:configuration

--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -30,7 +30,7 @@ msgid "You are running version <kbd>%version%</kbd>."
 msgstr ""
 
 msgid "Configuration"
-msgstr ""
+msgstr "Configuration"
 
 msgid "Checking your PHP installation"
 msgstr ""
