Remove unused metadata_header

--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -45,7 +45,7 @@ msgid "SimpleSAMLphp Show Metadata"
 msgstr ""
 
 msgid "Metadata"
-msgstr ""
+msgstr "Metadata"
 
 msgid "Copy to clipboard"
 msgstr ""
