Missed a few lines

--- a/locales/it/LC_MESSAGES/messages.po
+++ b/locales/it/LC_MESSAGES/messages.po
@@ -748,7 +748,7 @@ msgid ""
 "from the default value. Please edit the configuration file."
 msgstr ""
 "La password definita nella configurazione (auth.adminpassword) non è "
-"stata cambiata dal valore di default. Si prega di editare il file di "
+"stata cambiata dal valore di default. Si prega di modificare il file di "
 "configurazione."
 
 msgid "Converted metadata"
@@ -977,7 +977,7 @@ msgid "You are also logged in on these services:"
 msgstr "Attualmente sei anche connesso ai seguenti servizi:"
 
 msgid "SimpleSAMLphp Diagnostics"
-msgstr "Diagnostici di SimpleSAMLphp"
+msgstr "Diagnostica di SimpleSAMLphp"
 
 msgid "Debug information"
 msgstr "Informazioni di debug"
@@ -1291,7 +1291,7 @@ msgstr ""
 msgid "You can <a href=\"%METAURL%\">get the metadata xml on a dedicated URL</a>:"
 msgstr ""
 "Si possono <a href=\"%METAURL%\">ottenere i metadati in XML dall'URL "
-"dedicata</a>:"
+"dedicato</a>:"
 
 msgid "Street"
 msgstr "Via"
