frontpage:page_title

--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -21,7 +21,7 @@ msgid "Deprecated"
 msgstr "Deprecated"
 
 msgid "SimpleSAMLphp installation page"
-msgstr ""
+msgstr "SimpleSAMLphp installation page"
 
 msgid "SimpleSAMLphp is installed in:"
 msgstr ""
