--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -295,7 +295,7 @@ msgid ""
 msgstr ""
 
 msgid "XML to SimpleSAMLphp metadata converter"
-msgstr ""
+msgstr "XML to SimpleSAMLphp metadata converter"
 
 msgid "SAML 2.0 SP metadata"
 msgstr ""
