--- a/modules/admin/locales/es/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/es/LC_MESSAGES/admin.po
@@ -293,6 +293,9 @@ msgid ""
 "You are running an outdated version of SimpleSAMLphp. Please update to <a "
 "href=\"%latest%\">the latest version</a> as soon as possible."
 msgstr ""
+"Su instalaci&oacute;n de SimpleSAMLphp est&aacute; desactualizada. Por "
+"favor, actualice a la <a href=\"%latest%\">&uacute;ltima "
+"versi&oacute;n</a> lo antes posible."
 
 msgid "XML to SimpleSAMLphp metadata converter"
 msgstr "Conversor de XML a metadatos de SimpleSAMLphp"
