--- a/modules/admin/locales/ja/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ja/LC_MESSAGES/admin.po
@@ -289,7 +289,7 @@ msgstr ""
 msgid ""
 "You are running an outdated version of SimpleSAMLphp. Please update to <a "
 "href=\"%latest%\">the latest version</a> as soon as possible."
-msgstr ""
+msgstr "旧バージョンのSimpleSAMLphpが使われています。できるだけ早く<a href=\"%latest%\">最新バーション</a>にアップロードしてください"
 
 msgid "XML to SimpleSAMLphp metadata converter"
 msgstr "XMLをSimpleSAMLphpメタデータに変換"
