Move frontpage:warnings_https to admin-module

--- a/modules/admin/locales/el/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/el/LC_MESSAGES/admin.po
@@ -272,6 +272,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"Δεν χρησιμοποιείτε <strong>HTTPS</strong> για κρυπτογραφημένη επικοινωνία"
+" με τον χρήστη. Το HTTP επαρκεί για δοκιμαστικούς σκοπούς, ωστόσο σε "
+"περιβάλλον παραγωγής θα πρέπει να χρησιμοποιήσετε HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Διαβάστε περισσότερα...</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
