--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>You are not using HTTPS</strong> to protect communications with your "
+"users. HTTP works fine for testing purposes, but in a production environment "
+"you should use HTTPS. <a href=\"https://simplesamlphp.org/docs/stable/"
+"simplesamlphp-maintenance\">Read more about the maintenance of "
+"SimpleSAMLphp</a>."
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
