--- a/modules/admin/locales/et/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/et/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Sa ei kasuta andmete vahetamiseks HTTPS krüpteeritud "
+"sidet</strong>. HTTP sobib testimiseks hästi, kuid toodangus peaksid "
+"kindlasti HTTPS-i kasutama. [ <a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">Loe täpsemalt "
+"SimpleSAMLphp hooldamisest</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
