--- a/modules/admin/locales/he/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/he/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>אתה לא משתמש ב- HTTPS </strong> - התקשרות מוצפנת עם המשתמש. HTTP "
+"עובד בסדר למטרות בדיקה, אולם למערכות אמיתיות, כדי להשתמש ה HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\"> קרא עוד על תחזוק SimpleSAMLphp </a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
