--- a/modules/admin/locales/hu/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/hu/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Nem HTTPS protokollt használ</strong> - nem titkosított a "
+"kommunikáció! HTTP jó megoldás lehet teszt rendszerek esetében, de az "
+"éles rendszerben lehetőség szerint használjon HTTPS-t! [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Többet olvashat a SimpleSAMLphp beállításáról</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
