--- a/modules/admin/locales/id/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/id/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Anda tidak menggunakan HTTPS</strong> - komunikasi yang "
+"dienkripsi dengan user. HTTP bekerja baik-baik saja untuk tujuan "
+"pengetesan , tapi dalam lingkungan produksi, Anda sebaiknya menggunakan "
+"HTTPS. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Baca lebih lanjut tentang proses pemeliraan "
+"SimpleSAMLphp.</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
