--- a/modules/admin/locales/nb/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/nb/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Du bruker ikke HTTPS</strong> - kryptert kommunikasjon med "
+"brukeren. HTTP fungerer utmerket til testformål, men  i et "
+"produksjonsmiljø anbefales sterkt å skru på sikker kommunikasjon med "
+"HTTPS. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Les mer i dokumentet: SimpleSAMLphp maintenance</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
