--- a/modules/admin/locales/nn/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/nn/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Du bruker ikkje HTTPS</strong> - kryptert kommunikasjon med "
+"brukaren. Du kan bruka SimpleSAMLphp uten HTTPS til testformål, men "
+"dersom du skal bruka SimpleSAMLphp i eit produksjonsmiljø, vil vi sterkt "
+"tilrå å skru på sikker kommunikasjon med HTTPS. [ Les meir i dokumentet: "
+"<a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">SimpleSAMLphp maintenance</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
