--- a/modules/admin/locales/ro/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ro/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Atenție, nu utilizați HTTPS</strong> - comunicare criptată cu "
+"utilizatorul. HTTP funcționeaza bine pentru teste, dar în producție "
+"trebuie folosit HTTPS. [<a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">Citiți mai multe despre "
+"întreținerea SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
