--- a/modules/admin/locales/sl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/sl/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Ne uporabljate HTTPS</strong>-šifrirane komunikacije. "
+"SimpleSAMLphp deluje brez težav na HTTP, vendar le za testne namene, za "
+"uporabo SimpleSAMLphp v produkcijskem okolju uporabite HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Preberite več o SimpleSAMLphp vzdrževanju</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
