--- a/modules/admin/locales/sv/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/sv/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Du använder inte HTTPS</strong> - krypterad kommunikation med "
+"användaren. HTTP fungerar bra under test men i produktion ska du använda "
+"HTTPS. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Läs mer i dokumentet SimpleSAMLphp maintenance</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
