--- a/modules/admin/locales/tr/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/tr/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"Kullanıcıyla şifreli iletişim -<strong>HTTPS kullanmıyorsunuz</strong>. "
+"HTTP test amaçlı olarak kullanılabilir, ancak üretim ortamında, HTTPS "
+"kullanmalısınız. [ <a href=\"http://rnd.feide.no/content/simplesamlphp-"
+"maintenance-and-configuration\">SimpleSAMLphp bakımı hakkında daha "
+"fazlasını okuyun</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
