--- a/modules/admin/locales/ar/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ar/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>انت لا تستخدم HTTPS</strong> - محادثة مشفرة مع المستخدم. HTTP جيد"
+" للاختبارات لكن في بيئة النظام المبدئي ينبغي استخدام HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">read more about SimpleSAMLphp maintenance</a>]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
