--- a/modules/admin/locales/cs/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/cs/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Nepoužíváte HTTPS</strong> - šivrovanou komunikaci s uživatelem. "
+"HTTP je vhodné jen k testovacím účelům, pro produkční účely použijte "
+"HTTPS. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Čtete více o údržbě SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
