--- a/modules/admin/locales/da/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/da/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Du benytter ikke HTTPS</strong>-krypteret kommunikation med "
+"brugeren. SimpleSAMLphp vil fungere uden problemer med HTTP alene, men "
+"hvis du anvender systemet i produktionssystemer, anbefales det stærkt at "
+"benytte sikker kommunikation i form af HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">læs mere i dokumentet: SimpleSAMLphp maintenance</a> ] "
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
