--- a/modules/admin/locales/de/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/de/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Sie benutzen keine HTTPS</strong> - verschlüsselte Kommunikation "
+"mit dem Nutzer. SimpleSAMLphp funktioniert zum Testen auch mit HTTP "
+"problemlos, aber in einer Produktionsumgebung sollten Sie HTTPS benutzen."
+" [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Lesen sie mehr über die Verwaltung von SimpleSAMLphp</a> "
+"]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
