--- a/modules/admin/locales/es/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/es/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>No está usando HTTPS</strong> - comunicaciones cifradas con el "
+"usuario. HTTP funciona bien en entornos de evaluación, pero si va a "
+"emplearlo en producción, debería emplear HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-"
+"maintenance\">Lea más acerca del mantenimiento de SimpleSAMLphp </a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
