--- a/modules/admin/locales/eu/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/eu/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Ez zara erabiltzen ari HTTPSak</strong> - erabiltzailearekin "
+"zifratutako komunikazioak. HTTP zuzen ibiltzen da ebaluaketa ingurunetan,"
+" baina ustiapenean erabili behar baduzu, HTTPS erabili beharko zenuke. [ "
+"<a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Irakur ezazu gehiago SimpleSAMLphp-ren mantentze-lanei "
+"buruz </a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
