--- a/modules/admin/locales/fi/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/fi/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Et käytä HTTPS</strong> - vahvaa yhteystä käyttäjään. HTTP-"
+"protokolla on sopiva testeihin, mutta tuotantojärjestelmässä sinun tulee "
+"käyttää HTTPS:ää. [ <a href=\"http://rnd.feide.no/content/simplesamlphp-"
+"maintenance-and-configuration\">Lue SimpleSAMLphp ylläpidosta (eng)</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
