--- a/modules/admin/locales/fr/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/fr/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Vous n'utilisez pas HTTPS</strong> - communications chiffrées "
+"avec l'utilisateur.  Utiliser SimpleSAMLphp marchera parfaitement avec "
+"HTTP pour des tests, mais si vous voulez l'utiliser dans un environnement"
+" de production, vous devriez utiliser HTTPS. [  <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">En lire plus sur la maintenance de SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
