--- a/modules/admin/locales/it/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/it/LC_MESSAGES/admin.po
@@ -271,6 +271,12 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Non stai usando HTTPS</strong> - comunicazione cifrata con "
+"l'utente. HTTP pu&ograve; funzionare per i test, ma in un ambiente di "
+"produzione si dovrebbe usare HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Maggiori informazioni sulla manutenzione di "
+"SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
