--- a/modules/admin/locales/ja/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ja/LC_MESSAGES/admin.po
@@ -271,6 +271,9 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>あなたはHTTPS(暗号化通信)を行っていません。</strong>HTTPはテスト環境であれば正常に動作します、しかし製品環境ではHTTPSを使用するべきです。["
+" <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">詳しくはSimpleSAMLphpメンテナンス情報を読んでください</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
