--- a/modules/admin/locales/lb/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/lb/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Der benotzt ken HTTPS</strong> - verschlësselt Kommunikatioun mat"
+" dem Benotzer. SimpleSAMLphp funktionéiert einwandfräi mat HTTP fir "
+"Testzwéecker mais an engem produktiven Emfeld sollt et besser mat HTTPS "
+"lafen. [ <a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Liest méi iwert Maintenance vun SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
