--- a/modules/admin/locales/lt/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/lt/LC_MESSAGES/admin.po
@@ -272,6 +272,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Jūs nenaudojate HTTPS</strong> - šifruotos komunikacijos su "
+"vartotoju. HTTP puikiai tinka testavimo reikmėms, tačiau realioje "
+"aplinkoje turėtumėte naudoti HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Skaityti daugiau apie SimpleSAMLphp priežiūrą</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
