--- a/modules/admin/locales/lv/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/lv/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Jūs neizmantojat HTTPS</strong> - šifrētu komunikāciju ar "
+"lietotāju. HTTP ir labs testa nolūkiem, bet ražošanā jāizmanto HTTPS. [ "
+"<a href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Lasiet vairāk par SimpleSAMLphp uzturēšanu</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
