--- a/modules/admin/locales/pl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/pl/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Nie używasz HTTPS</strong> - szyfrowana komunikacja z "
+"użytkownikiem. HTTP jest OK dla testów, ale na produkcji powinieneś "
+"używać tylko HTTPS. [ <a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">Przeczytaj więcej o "
+"zarządzaniu SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
