--- a/modules/admin/locales/pt-br/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/pt-br/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Você não está utilizando HTTPS</strong> - comunicação encriptada "
+"com o usuário. HTTP funciona bem para testes, mas você deve utilizar "
+"HTTPS para produção. [ <a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">Leia mais sobre manutenção"
+" do SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
