--- a/modules/admin/locales/pt/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/pt/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Não está a ser usado HTTPS</strong> - comunicação cifrada com o "
+"utilizador. Para ambientes de teste, ligações HTTP são suficientes, mas "
+"num ambiente de produção deve ser usado HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Ler mais sobre manutenção do SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
