--- a/modules/admin/locales/ru/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/ru/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Вы не используете HTTPS</strong> - шифрованное соединение с "
+"пользователем. HTTP работает хорошо для тестовых целей, но в экплуатации "
+"вы должны использовать HTTPS. [ <a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">Узнайте больше об "
+"обслуживании SimpleSAMLphp</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
