--- a/modules/admin/locales/sr/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/sr/LC_MESSAGES/admin.po
@@ -271,6 +271,11 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>Ne koristite HTTPS</strong> - kriptovanu komunikaciju s "
+"korisnikom. HTTP se može koristiti za potrebe testiranja, ali u "
+"produkcionom okruženju trebali biste koristiti HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">Pročitajte više o SimpleSAMLphp podešavanjima</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
