--- a/modules/admin/locales/zh-tw/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/zh-tw/LC_MESSAGES/admin.po
@@ -271,6 +271,10 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>您不是使用 HTTPS </strong>-於使用的傳輸過程中加密。HTTP "
+"可以正常的利用於測試，但是在上線環境裡，您還是需要使用 HTTPS。[ <a href=\"http://rnd.feide.no/content"
+"/simplesamlphp-maintenance-and-configuration\">閱讀更多有關於 SimpleSAMLphp "
+"的維護方式</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
