--- a/modules/admin/locales/zh/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/zh/LC_MESSAGES/admin.po
@@ -271,6 +271,9 @@ msgid ""
 "simplesamlphp-maintenance\">Read more about the maintenance of "
 "SimpleSAMLphp</a>."
 msgstr ""
+"<strong>你没有使用HTTPS</strong> - 和用户加密的通信。HTTP在测试目的下很好,但生产环境请使用HTTPS. [ <a "
+"href=\"https://simplesamlphp.org/docs/stable/simplesamlphp-maintenance"
+"\">获取更多SimpleSAMLphp维护的信息</a> ]"
 
 msgid ""
 "<strong>The configuration uses the default secret salt</strong>. Make sure "
