Remove obsolete frontpage:federation

--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -166,7 +166,7 @@ msgid "Test"
 msgstr ""
 
 msgid "Federation"
-msgstr ""
+msgstr "Federation"
 
 msgid "Information on your PHP installation"
 msgstr ""
