Remove obsolete core:frontpage:checkphp

--- a/modules/admin/locales/en/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/en/LC_MESSAGES/admin.po
@@ -33,7 +33,7 @@ msgid "Configuration"
 msgstr "Configuration"
 
 msgid "Checking your PHP installation"
-msgstr ""
+msgstr "Checking your PHP installation"
 
 msgid "required"
 msgstr ""
