Migrate cardinality:cardinality_text

--- a/modules/core/locales/xh/LC_MESSAGES/core.po
+++ b/modules/core/locales/xh/LC_MESSAGES/core.po
@@ -13,7 +13,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-msgid "{core:cardinality:cardinality_text}"
+msgid ""
+"One or more of the attributes supplied by your identity provider did not "
+"contain the expected number of values."
 msgstr ""
 "Uphawu olunye okanye olungakumbi olunikelwe ngumboonelei wesazisi sakho "
 "aluqulethanga inani lamaxabiso alindelekileyo."
