--- a/modules/core/locales/zu/LC_MESSAGES/core.po
+++ b/modules/core/locales/zu/LC_MESSAGES/core.po
@@ -13,7 +13,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-msgid "{core:cardinality:cardinality_text}"
+msgid ""
+"One or more of the attributes supplied by your identity provider did not "
+"contain the expected number of values."
 msgstr ""
 "Isici esisodwa noma ngaphezulu esinikezwe umhlinzeki wakho kamazisi "
 "asizange siqukathe inani lezinombolo ezilindelwe."
