--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -399,7 +399,9 @@ msgstr "I-SimpleSAMLphp ibonakala ingalungiselelwanga kakuhle."
 msgid "{errors:title_DISCOPARAMS}"
 msgstr "Isicelo esibi kwinkonzo yofumaniso"
 
-msgid "{errors:descr_WRONGUSERPASS}"
+msgid ""
+"Either no user with the given username could be found, or the password "
+"you gave was wrong. Please check the username and try again."
 msgstr ""
 "Kusenokwenzeka akukho msebenzisi unegama lomsebenzisi elinikelweyo "
 "ofunyenweyo, okanye iphaswedi oyinikeleyo ayichanekanga. Nceda ujonge "
