--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -405,7 +405,9 @@ msgstr "I-SimpleSAMLphp ibonakala ingamisiwe ngendlela efanele."
 msgid "{errors:title_DISCOPARAMS}"
 msgstr "Isicelo esingalungile sesevisi yokuthola"
 
-msgid "{errors:descr_WRONGUSERPASS}"
+msgid ""
+"Either no user with the given username could be found, or the password "
+"you gave was wrong. Please check the username and try again."
 msgstr ""
 "Kungenzeka ukuthi akekho umsebenzisi onegama lomsebenzisi otholiwe, noma "
 "iphasiwedi oyinikezile ayilungile. Sicela uhlole igama lomsebenzisi bese "
