--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -487,7 +487,7 @@ msgstr "Uphumile"
 msgid "{errors:report_explain}"
 msgstr "Cacisa ukuba wenze ntoni xa bekusenzeka le mpazamo..."
 
-msgid "{logout:failed}"
+msgid "Logout failed"
 msgstr "Ukuphuma kusilele"
 
 msgid "{login:password}"
