Remove obsolete login:username

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -195,7 +195,7 @@ msgstr ""
 msgid "{logout:logout_only}"
 msgstr "Hayi, kuphela %SP%"
 
-msgid "{login:username}"
+msgid "Username"
 msgstr "Igama lomsebenzisi"
 
 msgid "{errors:error_header}"
