Remove obsolete errors:descr_LOGOUTINFOLOST

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -165,7 +165,15 @@ msgstr "Igqityiwe"
 msgid "{status:subject_header}"
 msgstr "Umbandela we-SAML"
 
-msgid "{errors:descr_LOGOUTINFOLOST}"
+msgid ""
+"The information about the current logout operation has been lost. You "
+"should return to the service you were trying to log out from and try to "
+"log out again. This error can be caused by the logout information "
+"expiring. The logout information is stored for a limited amout of time - "
+"usually a number of hours. This is longer than any normal logout "
+"operation should take, so this error may indicate some other error with "
+"the configuration. If the problem persists, contact your service "
+"provider."
 msgstr ""
 "Inkcazelo malunga nomsebenzi wokuphuma wangoku ilahlekile. Ufanele "
 "ubuyele kwinkonzo ubuzama ukuphuma kuyo uzame ukuphuma kwakhona. Le "
