Remove obsolete admin:cfg_check_back

--- a/locales/tr/LC_MESSAGES/messages.po
+++ b/locales/tr/LC_MESSAGES/messages.po
@@ -15,7 +15,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.3.4\n"
 
-msgid "{admin:cfg_check_back}"
+msgid "You have previously chosen to authenticate at"
 msgstr "Dosya listesine geri dön"
 
 msgid "{login:change_home_org_title}"
