Remove obsolete {errors:report_text}

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -514,7 +514,9 @@ msgstr ""
 "nomlawuli wale nkonzo yokungena, uze umthumele umyalezo wempazamo "
 "ongentla."
 
-msgid "{errors:report_text}"
+msgid ""
+"Optionally enter your email address, for the administrators to be able "
+"contact you for further questions about your issue:"
 msgstr ""
 "Unokhetho lokuthumela idilesi yeimeyile yakho, ukuze abalawuli bakwazi "
 "ukukuqhagamshela ukuba banemibuzo engakumbi malunga nomba wakho:"
