--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -519,7 +519,9 @@ msgstr ""
 "engalindelwe noma umiso olungafanele lwe-SimpleSAMLphp. Thinta umlawuli "
 "wale sevisi yokungena, bese umthumela umlayezo wephutha ongenhla."
 
-msgid "{errors:report_text}"
+msgid ""
+"Optionally enter your email address, for the administrators to be able "
+"contact you for further questions about your issue:"
 msgstr ""
 "Faka ngokuzithandela ikheli lakho le-imeyili, ukuze abalawuli bakwazi "
 "ukukuthinta ngemibuzo eyengeziwe mayelana nenkinga yakho:"
