--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -396,7 +396,9 @@ msgstr ""
 "isiqiniseko sokuthi wonke amaseshini akho avaliwe, ukhuthazwa ukuthi "
 "<i>uvale isiphequluli sakho sewebhu</i>."
 
-msgid "{login:change_home_org_text}"
+msgid ""
+"You have chosen <b>%HOMEORG%</b> as your home organization. If this is "
+"wrong you may choose another one."
 msgstr ""
 "Ukhethe okuthi <b>%HOMEORG%</b> njengenhlangano yakho yasekhaya. Uma "
 "lokhu kungalungile ungase ukhethe enye."
