Remove obsolete msgid "{login:help_text}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -500,7 +500,10 @@ msgstr "Ukuphuma kusilele"
 msgid "{login:password}"
 msgstr "Iphaswedi"
 
-msgid "{login:help_text}"
+msgid ""
+"Without your username and password you cannot authenticate "
+"yourself for access to the service. There may be someone that can help "
+"you. Consult the help desk at your organization!"
 msgstr ""
 "Ngaphandle kwegama lomsebenzisi nephaswedi yakho awukwazi ukuzingqinisisa"
 " ukuze ufumane ufikelelo kwinkonzo. Kusenokuba ukho umntu onokukunceda. "
