--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -506,7 +506,10 @@ msgstr "Ukuphuma kuhlulekile"
 msgid "{login:password}"
 msgstr "Iphasiwedi"
 
-msgid "{login:help_text}"
+msgid ""
+"Without your username and password you cannot authenticate "
+"yourself for access to the service. There may be someone that can help "
+"you. Consult the help desk at your organization!"
 msgstr ""
 "Ngaphandle kwegama lakho lomsebenzisi nephasiwedi awukwazi "
 "ukuziqinisekisa ukuze ufinyelele isevisi. Kungase kube khona ozokusiza. "
