--- a/locales/zu/LC_MESSAGES/messages.po
+++ b/locales/zu/LC_MESSAGES/messages.po
@@ -66,7 +66,7 @@ msgstr "Kutholwe umlayezo ongalungile"
 msgid "{login:login_button}"
 msgstr "Ngena"
 
-msgid "{status:header_shib}"
+msgid "Shibboleth demo"
 msgstr "Idemo ye-Shibboleth"
 
 msgid "{disco:icon_prefered_idp}"
