--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -417,7 +417,7 @@ msgstr ""
 msgid "{status:sessionsize}"
 msgstr "Ubukhulu beseshoni: %SIZE%"
 
-msgid "{errors:title_LOGOUTINFOLOST}"
+msgid "Logout information lost"
 msgstr "Inkcazelo yokuphuma ilahlekile"
 
 msgid "{errors:title_NORELAYSTATE}"
