Remove obsolete msgid "{errors:descr_NOTFOUNDREASON}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -276,7 +276,7 @@ msgstr ""
 "Inkcazelo yokulungisa engezantsi isenokuba ibangela umdla kumlawuli / "
 "idesika yoncedo:"
 
-msgid "{errors:descr_NOTFOUNDREASON}"
+msgid "The given page was not found. The reason was: %REASON%  The URL was: %URL%"
 msgstr ""
 "Ikhasi elinikelweyo alifunyenwanga. Isizathu sesi: %REASON%  I-URL ngu: "
 "%URL%"
