--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -14,7 +14,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 1.3\n"
 
-msgid "{login:next}"
+msgid "Next"
 msgstr "Okulandelayo"
 
 msgid "{errors:title_METADATANOTFOUND}"
