--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -153,7 +153,7 @@ msgstr ""
 msgid "{status:subject_format}"
 msgstr "Ufomatho"
 
-msgid "{errors:descr_NOTVALIDCERT}"
+msgid "You did not present a valid certificate."
 msgstr "Awukhange uzise isatifikethi esisebenzayo."
 
 msgid "{errors:title_NOTFOUND}"
