--- a/locales/zh-tw/LC_MESSAGES/messages.po
+++ b/locales/zh-tw/LC_MESSAGES/messages.po
@@ -425,7 +425,7 @@ msgstr "找不到您所要存取的頁面，該網址是：%URL%"
 msgid "{errors:howto_text}"
 msgstr "這個問題可能是因為 SimpleSAMLphp 的某些例外的行為或無效設定。連絡這個登入服務的管理員，以及傳送這些錯誤訊息。"
 
-msgid "{admin:metadata_adfs-idp}"
+msgid "ORCID researcher identifiers"
 msgstr "ADFS 驗證提供者 Metadata"
 
 msgid "{admin:debug_sending_message_text_button}"
