Remove obsolete msgid "{errors:title_LDAPERROR}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -89,7 +89,7 @@ msgstr "Impazamo iprosesa iSicelo Sokuphuma"
 msgid "{logout:hold}"
 msgstr "Ibanjiwe"
 
-msgid "{errors:title_LDAPERROR}"
+msgid "LDAP Error"
 msgstr "Impazamo ye-LDAP"
 
 msgid "{errors:descr_AUTHSOURCEERROR}"
