Remove obsolete msgid "{errors:title_UNKNOWNCERT}"

--- a/locales/xh/LC_MESSAGES/messages.po
+++ b/locales/xh/LC_MESSAGES/messages.po
@@ -358,7 +358,7 @@ msgstr ""
 msgid "{errors:title_CONFIG}"
 msgstr "Impazamo yolungiselelo"
 
-msgid "{errors:title_UNKNOWNCERT}"
+msgid "Unknown certificate"
 msgstr "Isatifikethi esingaziwayo"
 
 msgid "{general:no}"
